[gd_scene load_steps=4 format=3 uid="uid://m7iarlhgo6sb"]

[ext_resource type="Script" path="res://game_scenes/profiles_screen/profiles_screen.gd" id="1_8wg2s"]
[ext_resource type="Theme" uid="uid://b2ufqqc6nun3o" path="res://pixel font/mid_font_theme.tres" id="2_qb6p7"]
[ext_resource type="Theme" uid="uid://867x5f46yrxo" path="res://pixel font/small_font_theme.tres" id="3_6gpeu"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8wg2s")

[node name="database_download" type="Button" parent="."]
offset_left = 225.0
offset_top = 317.0
offset_right = 464.0
offset_bottom = 405.0
theme = ExtResource("2_qb6p7")
text = "DATABASE"

[node name="template_download" type="Button" parent="."]
offset_left = 681.0
offset_top = 317.0
offset_right = 920.0
offset_bottom = 407.0
theme = ExtResource("2_qb6p7")
text = "TEMPLATE"

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(600, 400)
access = 2

[node name="FileDialog2" type="FileDialog" parent="."]
size = Vector2i(600, 400)
access = 2

[node name="Label" type="Label" parent="."]
offset_left = 325.0
offset_top = 40.0
offset_right = 825.0
offset_bottom = 185.0
theme = ExtResource("2_qb6p7")
text = "Create Your Profiles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 219.0
offset_top = 169.0
offset_right = 929.0
offset_bottom = 211.0
theme = ExtResource("3_6gpeu")
text = "Download the database and use the template to create your OPFOR Profile"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 124.0
offset_top = 210.0
offset_right = 1030.0
offset_bottom = 233.0
theme = ExtResource("3_6gpeu")
text = "Choose a location and type a name for the files. Then open them in Excel or Google Sheets."

[node name="Label4" type="Label" parent="."]
offset_left = 99.0
offset_top = 431.0
offset_right = 152.0
offset_bottom = 463.0
theme = ExtResource("3_6gpeu")

[node name="Label5" type="Label" parent="."]
offset_left = 99.0
offset_top = 450.0
offset_right = 151.0
offset_bottom = 484.0
theme = ExtResource("3_6gpeu")

[node name="Continue" type="Button" parent="."]
offset_left = 410.0
offset_top = 508.0
offset_right = 726.0
offset_bottom = 620.0
theme = ExtResource("2_qb6p7")
text = "CONTINUE"
